// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeIcon when in classic mode when rendered should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #335c6d;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="default"
/>
`;

exports[`TypeIcon when in classic mode when rendered should match the snapshot 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #C7384F;
  background-color: #c7384f;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="error"
/>
`;

exports[`TypeIcon when in classic mode when rendered should match the snapshot 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #ffab00;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="help"
/>
`;

exports[`TypeIcon when in classic mode when rendered should match the snapshot 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #0073C2;
  background-color: #1573e6;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="info"
/>
`;

exports[`TypeIcon when in classic mode when rendered should match the snapshot 5`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #ff7d00;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="maintenance"
/>
`;

exports[`TypeIcon when in classic mode when rendered should match the snapshot 6`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #639;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="new"
/>
`;

exports[`TypeIcon when in classic mode when rendered should match the snapshot 7`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #00B000;
  background-color: #50b848;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="success"
/>
`;

exports[`TypeIcon when in classic mode when rendered should match the snapshot 8`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #E96400;
  background-color: #ff7d00;
}

.c0 span:before {
  color: #FFFFFF;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="warning"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #335c6d;
}

<info
  className="c0"
  type="default"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #C7384F;
}

.c0 span:before {
  color: #c7384f;
}

<info
  className="c0"
  type="error"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #ffab00;
}

<info
  className="c0"
  type="help"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #0073C2;
}

.c0 span:before {
  color: #1573e6;
}

<info
  className="c0"
  type="info"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 5`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #ff7d00;
}

<info
  className="c0"
  type="maintenance"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 6`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #639;
}

<info
  className="c0"
  type="new"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 7`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #00B000;
}

.c0 span:before {
  color: #50b848;
}

<info
  className="c0"
  type="success"
/>
`;

exports[`TypeIcon when in classic mode when transparent prop is set to true applies white background and the type icon with the proper style applied 8`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #E96400;
}

.c0 span:before {
  color: #ff7d00;
}

<info
  className="c0"
  type="warning"
/>
`;

exports[`TypeIcon when rendered renders correctly 1`] = `
<styled.div
  as="info"
  roundedCorners={true}
  theme={
    Object {
      "colors": Object {
        "border": "#668491",
        "brand": "#00DC00",
        "error": "#C7384F",
        "focus": "#FFB500",
        "info": "#0073C2",
        "primary": "#26A826",
        "secondary": "#006300",
        "success": "#00B000",
        "tertiary": "#004400",
        "warning": "#E96400",
        "white": "#FFFFFF",
      },
      "disabled": Object {
        "border": "#CCD6DA",
        "disabled": "rgba(0,0,0,0.55)",
        "input": "#F2F4F5",
      },
      "name": "base",
      "text": Object {
        "color": "rgba(0,0,0,0.9)",
        "placeholder": "rgba(0,0,0,0.3)",
        "size": "14px",
      },
    }
  }
  transparent={false}
  type="info"
>
  <Icon
    bgSize="small"
    type="info"
  />
</styled.div>
`;

exports[`TypeIcon when rendered should match the snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #C7384F;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="error"
/>
`;

exports[`TypeIcon when rendered should match the snapshot 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #0073C2;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="info"
/>
`;

exports[`TypeIcon when rendered should match the snapshot 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #00B000;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="success"
/>
`;

exports[`TypeIcon when rendered should match the snapshot 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #E96400;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
  type="warning"
/>
`;

exports[`TypeIcon when roundedCorners prop is set to false should apply no border-radius 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 0;
}

.c0 span:before {
  color: #FFFFFF;
}

<info
  className="c0"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #C7384F;
}

<info
  className="c0"
  type="error"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #0073C2;
}

<info
  className="c0"
  type="info"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #00B000;
}

<info
  className="c0"
  type="success"
/>
`;

exports[`TypeIcon when transparent prop is set to true applies white background and the type icon with the proper style applied 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 30px;
  text-align: center;
  border-radius: 3px 0 0 3px;
  background-color: #FFFFFF;
}

.c0 span:before {
  color: #E96400;
}

<info
  className="c0"
  type="warning"
/>
`;
